k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-backend
  labels:
    app: loan-backend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: loan-backend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      labels:
        app: loan-backend

    spec:
      containers:
        - name: loan-backend
          image: loan-backend:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 9898

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 9898
            failureThreshold: 30
            periodSeconds: 10

          # ❤️ LIVENESS PROBE
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9898
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          # ✅ READINESS PROBE
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9898
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
