k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loan-backend-service
spec:
  type: NodePort
  selector:
    app: loan-backend
  ports:
    - port: 80
      targetPort: 9898
      nodePort: 30007
