k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-backend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: loan-strategy-calculator.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loan-backend-service
                port:
                  number: 80
